tests/ui/macros/builtin-std-paths-fail.stderr
error[E0433]: cannot find macro `RustcDecodable` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:2:11
   |
LL |     core::RustcDecodable,
   |           ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `core`

error[E0433]: cannot find macro `RustcDecodable` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:4:11
   |
LL |     core::RustcDecodable,
   |           ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `core`

error[E0433]: cannot find macro `RustcDecodable` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:2:11
   |
LL |     core::RustcDecodable,
   |           ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `core`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0433]: cannot find macro `RustcDecodable` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:4:11
   |
LL |     core::RustcDecodable,
   |           ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `core`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0433]: cannot find macro `bench` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:7:9
   |
LL | #[core::bench]
   |         ^^^^^ could not find `bench` in `core`

error[E0433]: cannot find macro `global_allocator` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:8:9
   |
LL | #[core::global_allocator]
   |         ^^^^^^^^^^^^^^^^ could not find `global_allocator` in `core`

error[E0433]: cannot find macro `test_case` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:9:9
   |
LL | #[core::test_case]
   |         ^^^^^^^^^ could not find `test_case` in `core`

error[E0433]: cannot find macro `test` in crate `core`
  --> $DIR/builtin-std-paths-fail.rs:10:9
   |
LL | #[core::test]
   |         ^^^^ could not find `test` in `core`

error[E0433]: cannot find macro `RustcDecodable` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:14:10
   |
LL |     std::RustcDecodable,
   |          ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `std`

error[E0433]: cannot find macro `RustcDecodable` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:16:10
   |
LL |     std::RustcDecodable,
   |          ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `std`

error[E0433]: cannot find macro `RustcDecodable` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:14:10
   |
LL |     std::RustcDecodable,
   |          ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `std`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0433]: cannot find macro `RustcDecodable` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:16:10
   |
LL |     std::RustcDecodable,
   |          ^^^^^^^^^^^^^^ could not find `RustcDecodable` in `std`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0433]: cannot find macro `bench` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:19:8
   |
LL | #[std::bench]
   |        ^^^^^ could not find `bench` in `std`

error[E0433]: cannot find macro `global_allocator` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:20:8
   |
LL | #[std::global_allocator]
   |        ^^^^^^^^^^^^^^^^ could not find `global_allocator` in `std`

error[E0433]: cannot find macro `test_case` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:21:8
   |
LL | #[std::test_case]
   |        ^^^^^^^^^ could not find `test_case` in `std`

error[E0433]: cannot find macro `test` in crate `std`
  --> $DIR/builtin-std-paths-fail.rs:22:8
   |
LL | #[std::test]
   |        ^^^^ could not find `test` in `std`
   |
note: found an item that was configured out
  --> $SRC_DIR/std/src/lib.rs:LL:COL
note: the item is gated here
  --> $SRC_DIR/std/src/lib.rs:LL:COL

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0433`.
